<resources>
    <string name="app_name">ProjectAnhThanh</string>
    <string name="location">
        <![CDATA[
        <html>
            <p> <font color="#DF7B42">Địa điểm:</font> Nhà thi đấu đa năng</p>
        </html>]]>
    </string>

    <string name="tv_admod">
        <![CDATA[
        <html>
            <p> <h3><font color="#DF7B42">Lễ Hội Mùa Xuân Họ Dương Việt Nam 2019</font></h3> \n Hướng về cội nguồn, hội nhập phát triển.</p>
        </html>]]>
    </string>

    <string name="fake_tv_time">Từ 07:00\nĐến 11:00</string>
    <string name="fake_tv_description">Cắt băng khai trương và thăm không gian Văn hóa - Lịch sử</string>
    <string name="tv_description">Chủ tịch Hội Đồng Họ Dương Việt Nam. Chủ tịch HĐQT Ngân hàng TMCP Sài Gòn Thường Tín (Sacombank), Chủ tịch Hiệp hội Macca Việt Nam</string>

    <string name="text_content_introduce">Là một doanh nhân ưu tú, tài đức vẹn toàn của Họ Dương Việt Nam. Ông từ một Thiếu tá quân đội trở thành một Doanh nhân nổi tiếng, ông chủ của Tập đoàn Him Lam - nơi có hơn 20 Công ty con là thành viên, đồng thời là Chủ tịch HĐQT Ngân hàng Sacombank. Ông là chuyên gia trong các lĩnh vực Xây dựng. Bất động sản; Xuất nhập khẩu; Tài chính ngân hàng.</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <string name="recyclerview_fab_example">RecyclerView FAB example</string>
    <string name="floating_action_menu">Floating Action Menu</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed ultricies risus. Integer nisi orci, lacinia sit amet mi in, mollis scelerisque purus. Nunc risus ligula, maximus eu orci a, facilisis dictum velit. Proin nec laoreet magna. Nulla ut sagittis lorem. Morbi id enim fermentum, semper diam et, tempus leo. Aliquam vel congue orci. Suspendisse potenti. Curabitur finibus diam augue, vel bibendum sapien ultrices non.</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>

    <string name="err_video">No data update</string>
    <string name="err_document">No data update</string>
    <string name="button_see_detail">Xem Chi Tiết</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="back_home">Về Trang Chủ Sự Kiện</string>
    <string name="media">Ảnh/Video</string>
    <string name="document">Tài Liệu</string>
    <string name="shop_title">Gian Hàng</string>
    <string name="txt_map">Sơ Đồ</string>
    <string name="guest">Diễn Giả</string>
    <string name="program">Chương Trình</string>
    <string name="introduction">Giới Thiệu</string>
    <string name="share_sms">Chia sẻ qua SMS</string>
    <string name="share_email">Chia sẻ qua email</string>
    <string name="share_facebook">Chia sẻ qua facebook</string>

    <string-array name="cities">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>TP HCM</item>
    </string-array>


</resources>
